--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Noto+Sans+KR:wght@100;400;700&display=swap');
+
 //common
 @import './common/reset';
 @import './common/variable';
