--- a/src/scss/common/_sub-layout.scss
+++ b/src/scss/common/_sub-layout.scss
@@ -1,8 +1,12 @@
 .content {
 	width: 100%;
-	height: 100vh;
 	position: relative;
 	z-index: 1;
+	&::after {
+		content: '';
+		display: block;
+		clear: both;
+	}
 	.title {
 		position: absolute;
 		top: 40px;
@@ -20,5 +24,10 @@
 		height: 100%;
 		margin: 0 auto;
 		padding-top: 200px;
+		&::after {
+			content: '';
+			display: block;
+			clear: both;
+		}
 	}
 }
