--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,8 +9,7 @@
 @import './common/menu';
 @import './common/popup';
 @import './common/sub-layout';
-
-//main page
+@import './common/timetable'; //main page
 @import './main/visual';
 
 // sub page
