--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -16,12 +16,14 @@ header {
 		z-index: 5;
 
 		h1 {
-			width: 70px;
-			height: 70px;
-			img {
+			width: 60px;
+			height: 60px;
+			svg {
 				width: 100%;
 				height: 100%;
-				object-fit: cover;
+				path {
+					fill: $white;
+				}
 			}
 		}
 
@@ -68,17 +70,26 @@ header {
 	}
 
 	&.sub {
-		.menuBtn {
-			&::before {
-				background-color: $text;
+		.inner {
+			h1 {
+				svg {
+					path {
+						fill: $bg;
+					}
+				}
 			}
+			.menuBtn {
+				&::before {
+					background-color: $text;
+				}
 
-			&::after {
-				background-color: $text;
-			}
+				&::after {
+					background-color: $text;
+				}
 
-			span {
-				background-color: $text;
+				span {
+					background-color: $text;
+				}
 			}
 		}
 	}
