--- a/src/scss/common/_reset.scss
+++ b/src/scss/common/_reset.scss
@@ -20,3 +20,15 @@ a:visited {
 	text-decoration: none;
 	color: #000;
 }
+
+.sr-only {
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	position: absolute;
+	top: -99999px;
+}
+
+fieldset {
+	border: none;
+}
