--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -12,16 +12,19 @@
 	font-family: 'Montserrat', sans-serif;
 
 	article {
-		width: 70vw;
-		height: 80vh;
-		background-color: #fff;
-		position: relative;
+		width: 100vw;
+		height: 90vh;
+		position: fixed;
+		bottom: 0;
+		left: 0;
 
 		img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
 			filter: grayscale(0.8);
+			border-top-left-radius: 50px;
+			border-top-right-radius: 50px;
 		}
 		.text {
 			position: absolute;
@@ -67,7 +70,7 @@
 		.popCloseBtn {
 			position: absolute;
 			top: 0;
-			right: 10px;
+			right: 20px;
 			cursor: pointer;
 			z-index: 3;
 			width: 70px;
@@ -84,6 +87,7 @@
 				text-transform: uppercase;
 				line-height: 70px;
 				z-index: 4;
+				text-align: center;
 			}
 		}
 	}
