youtube API 호출하여 클릭 시 팝업으로 영상 노출

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,10 @@
 @import './common/menu';
 @import './common/popup';
 @import './common/sub-layout';
-@import './common/timetable'; //main page
+@import './common/timetable';
+@import './common/youtubePop';
+
+//main page
 @import './main/visual';
 
 // sub page
