--- a/src/scss/sub/_artist.scss
+++ b/src/scss/sub/_artist.scss
@@ -1,6 +1,13 @@
 .Artist {
 	width: 100%;
 	font-family: 'Montserrat', sans-serif;
+	background: rgb(232, 182, 255);
+	background: linear-gradient(
+		65deg,
+		rgba(232, 182, 255, 0.5) 0%,
+		rgba(141, 241, 255, 0.5) 50%,
+		rgba(106, 255, 171, 0.49763655462184875) 100%
+	);
 	article {
 		float: left;
 	}
@@ -9,7 +16,7 @@
 		ul {
 			li {
 				font-weight: bold;
-
+				color: $text;
 				letter-spacing: 0.03em;
 				margin-bottom: 20px;
 				text-align: right;
@@ -50,7 +57,7 @@
 					width: 100%;
 					height: 100%;
 					object-fit: cover;
-					filter: saturate(0.4);
+					filter: saturate(0);
 					transition: 1s;
 				}
 			}
@@ -76,11 +83,15 @@
 
 			&:hover {
 				.img img {
-					filter: blur(2px);
+					filter: blur(2px) saturate(0.5);
 				}
 				.text {
 					opacity: 1;
 				}
+			}
+
+			&:last-child {
+				width: 100%;
 			}
 		}
 	}
