youtube 메인 비디오 수정

--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -23,10 +23,11 @@
 			color: $text;
 		}
 
-		> iframe {
+		> img {
 			width: 100%;
 			height: 300px;
 			margin: 10px 0;
+			object-fit: cover;
 		}
 
 		> p {
