FAQ 페이지 -> location 페이지로 수정

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,7 @@
 
 // sub page
 @import './sub/artist';
-@import './sub/faq';
+@import './sub/location';
 @import './sub/gallery';
 @import './sub/join';
 @import './sub/notice';
