community css 경로 추가

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import './common/sub-layout';
 @import './common/timetable';
 @import './common/youtubePop';
+@import './common/community';
 
 //main page
 @import './main/visual';
