로딩화면 추가

--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -1,9 +1,16 @@
 .Gallery {
+	.loading {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
 	.galleryWrap {
 		width: 100%;
 		opacity: 0;
 		transform: translateY(100px);
-		transition: 0.5s;
+		transition: transform 2s, opacity 2s;
 
 		&.on {
 			opacity: 1;
@@ -11,8 +18,9 @@
 		}
 
 		article {
-			width: 25%;
+			width: 23%;
 			padding: 20px;
+			margin: 10px;
 			border: 1px solid #dcdcdc;
 			.pic {
 				width: 100%;
