component 이름 변경

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,7 +10,7 @@
 @import './common/popup';
 @import './common/sub-layout';
 @import './common/timetable';
-@import './common/youtubePop';
+@import './common/basicPop';
 @import './common/community';
 
 //main page
