--- a/src/scss/common/_basicPop.scss
+++ b/src/scss/common/_basicPop.scss
@@ -15,6 +15,12 @@
 
 		video,
 		iframe {
+			width: auto;
+			height: 100%;
+			object-fit: cover;
+		}
+
+		img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
