--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -22,7 +22,7 @@ header {
 				width: 100%;
 				height: 100%;
 				path {
-					fill: $white;
+					fill: $bg;
 				}
 			}
 		}
@@ -41,7 +41,7 @@ header {
 				display: block;
 				width: 100%;
 				height: 2px;
-				background-color: #fff;
+				background-color: $bg;
 			}
 
 			&::after {
@@ -52,7 +52,7 @@ header {
 				display: block;
 				width: 100%;
 				height: 2px;
-				background-color: #fff;
+				background-color: $bg;
 			}
 
 			span {
@@ -63,7 +63,7 @@ header {
 				display: block;
 				width: 80%;
 				height: 2px;
-				background-color: #fff;
+				background-color: $bg;
 				text-indent: -9999px;
 			}
 		}
