--- a/src/scss/common/_basicPop.scss
+++ b/src/scss/common/_basicPop.scss
@@ -12,7 +12,9 @@
 		width: 100%;
 		height: 100%;
 		position: relative;
-
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		video,
 		iframe {
 			width: auto;
@@ -21,9 +23,9 @@
 		}
 
 		img {
-			width: 100%;
 			height: 100%;
-			object-fit: cover;
+			width: auto;
+			object-fit: contain;
 		}
 
 		span.close {
