--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -18,6 +18,7 @@ header {
 		h1 {
 			width: 60px;
 			height: 60px;
+			transition: 0.4s;
 			svg {
 				width: 100%;
 				height: 100%;
@@ -90,6 +91,25 @@ header {
 				span {
 					background-color: $text;
 				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	header {
+		.inner {
+			width: 100%;
+			h1 {
+				width: 40px;
+				height: 40px;
+				margin-left: 30px;
+			}
+
+			.menuBtn {
+				width: 30px;
+				height: 30px;
+				margin-right: 30px;
 			}
 		}
 	}
