반응형 수정

--- a/src/scss/common/_community.scss
+++ b/src/scss/common/_community.scss
@@ -128,3 +128,23 @@
 		}
 	}
 }
+
+@media screen and (max-width: $tablet) {
+	.Community {
+		.community-inner {
+			width: 100%;
+			.community-title {
+				h2 {
+					font-size: $fontXXL;
+				}
+			}
+			.inputBox {
+				.write-box {
+					input {
+						padding: 20px;
+					}
+				}
+			}
+		}
+	}
+}
