--- a/src/scss/common/_timetable.scss
+++ b/src/scss/common/_timetable.scss
@@ -79,3 +79,47 @@
 		}
 	}
 }
+
+@media screen and(max-width: $tablet) {
+	.TimeTable {
+		background-color: #f0f0f0;
+
+		table {
+			width: 80%;
+			margin: 0 auto;
+
+			tr {
+				th {
+					width: calc(80% / 3);
+					padding: 0;
+
+					&:nth-of-type(1) {
+						&::before {
+							display: none;
+						}
+					}
+
+					&:nth-of-type(2) {
+						&::before {
+							display: none;
+						}
+					}
+
+					&:nth-of-type(3) {
+						&::before {
+							display: none;
+						}
+					}
+
+					strong {
+						font-size: $fontXXL;
+					}
+				}
+
+				td {
+					padding: 50px 0;
+				}
+			}
+		}
+	}
+}
