--- a/src/scss/sub/_artist.scss
+++ b/src/scss/sub/_artist.scss
@@ -90,3 +90,45 @@
 		}
 	}
 }
+
+@media screen and (max-width: $tablet) {
+	.Artist {
+		.artist-list {
+			display: none;
+		}
+
+		.artist-thumb {
+			width: 100%;
+
+			.artist-card {
+				width: calc(50% - 10px);
+
+				&:nth-of-type(3n) {
+					margin-right: 20px;
+				}
+				&:nth-of-type(2n) {
+					margin-right: 0px;
+				}
+
+				.text {
+					span {
+						font-size: $fontXL;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	.Artist {
+		.artist-thumb {
+			width: 100%;
+
+			.artist-card {
+				width: 100%;
+				margin-right: 0;
+			}
+		}
+	}
+}
