--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -5,80 +5,48 @@
 		display: block;
 		clear: both;
 	}
-	.mainVid {
-		width: 100%;
-		height: 300px;
-		font-family: 'Montserrat', sans-serif;
-		margin-bottom: 120px;
+}
+.vids {
+	width: 380px;
+	height: 250px;
+	margin-right: 20px;
+	float: left;
+	margin-bottom: 100px;
 
-		&::after {
-			content: '';
-			display: block;
-			clear: both;
-		}
-
-		h3 {
-			font-size: $fontXL;
-			font-weight: normal;
-			color: $text;
-		}
-
-		> img {
-			width: 100%;
-			height: 300px;
-			margin: 10px 0;
-			object-fit: cover;
-		}
-
-		> p {
-			display: flex;
-			justify-content: end;
-			font-size: $fontS;
-			color: $text;
-		}
+	&:nth-of-type(3),
+	&:nth-of-type(6) {
+		margin-right: 0;
 	}
-	.subVid {
-		width: 380px;
-		height: 250px;
-		margin-right: 20px;
-		float: left;
-		margin-bottom: 100px;
 
-		&:nth-of-type(4),
-		&:nth-of-type(7) {
-			margin-right: 0;
+	h4 {
+		font-size: $fontL;
+		font-weight: normal;
+		margin-bottom: 10px;
+	}
+
+	p {
+		text-align: right;
+	}
+
+	.pic {
+		width: 100%;
+		height: 100%;
+		margin-bottom: 10px;
+		padding-top: 10px;
+		overflow: hidden;
+
+		&:hover img {
+			filter: none;
 		}
 
-		h4 {
-			font-size: $fontL;
-			font-weight: normal;
-			margin-bottom: 10px;
-		}
-
-		p {
-			text-align: right;
-		}
-
-		.pic {
+		img {
 			width: 100%;
 			height: 100%;
-			margin-bottom: 10px;
-			padding-top: 10px;
-			overflow: hidden;
-
-			&:hover img {
-				filter: none;
-			}
-
-			img {
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-				filter: saturate(0);
-				transition: 0.5s;
-				transform: scale(1.25);
-				cursor: pointer;
-			}
+			object-fit: cover;
+			filter: saturate(0);
+			transition: 0.5s;
+			transform: scale(1.25);
+			cursor: pointer;
 		}
 	}
 }
