--- a/src/scss/main/_vid.scss
+++ b/src/scss/main/_vid.scss
@@ -1,8 +1,22 @@
 figure.Vid {
 	width: 100%;
 	height: 100vh;
-	background-color: #f5d0d1;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+
+	.inner {
+		width: 1180px;
+		margin: 0 auto;
+
+		&::after {
+			overflow: hidden;
+		}
+	}
+	article {
+		float: left;
+		width: calc(50% - 20px);
+
+		&:nth-of-type(1),
+		&:nth-of-type(3) {
+			margin-right: 20px;
+		}
+	}
 }
