--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -54,24 +54,25 @@ figure.visual {
 		right: 10%;
 		transform: translateY(-50%);
 
-		div {
+		.content {
 			position: relative;
-			width: 500px;
-			height: 500px;
-			background-color: $bg;
-			border-top-left-radius: 50%;
-			border-top-right-radius: 50%;
-
 			&::before {
 				content: '';
 				position: absolute;
 				top: -200px;
 				left: 50%;
 				transform: translateX(-50%);
-
 				width: 1px;
-				height: 300px;
+				height: 200px;
 				background-color: $bg;
+			}
+			video {
+				width: 500px;
+				height: 500px;
+				background-color: $bg;
+				border-top-left-radius: 50%;
+				border-top-right-radius: 50%;
+				object-fit: cover;
 			}
 		}
 	}
