--- a/src/scss/main/_vid.scss
+++ b/src/scss/main/_vid.scss
@@ -1,7 +1,9 @@
 figure.Vid {
 	width: 100%;
 	height: 100vh;
-
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	.inner {
 		width: 1180px;
 		margin: 0 auto;
@@ -12,11 +14,62 @@ figure.Vid {
 	}
 	article {
 		float: left;
-		width: calc(50% - 20px);
+		width: 280px;
+		height: 370px;
+		margin-right: 20px;
+		cursor: pointer;
+		position: relative;
+		overflow: hidden;
 
-		&:nth-of-type(1),
-		&:nth-of-type(3) {
-			margin-right: 20px;
+		&:nth-of-type(2),
+		&:nth-of-type(4) {
+			transform: translateY(100px);
+		}
+
+		&:last-child {
+			margin-right: 0;
+		}
+
+		.pic {
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				transform: scale(1.4);
+				filter: grayscale(1);
+				transition: 0.5s;
+			}
+		}
+
+		.btn {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 100%;
+			left: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			background-color: rgba(255, 255, 255, 0.4);
+			transition: 0.5s;
+			span {
+				font-size: $fontM;
+				color: $white;
+				font-weight: bold;
+			}
+		}
+
+		&:hover {
+			.btn {
+				top: 0;
+			}
+			.pic img {
+				filter: none;
+			}
 		}
 	}
 }
