--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -1,6 +1,6 @@
 figure.visual {
 	width: 100%;
-	height: 100vh;
+	height: 4500px;
 	background: rgb(236, 235, 234);
 	background: radial-gradient(
 		circle,
@@ -11,10 +11,17 @@ figure.visual {
 	);
 	color: $text;
 	position: relative;
+	padding-bottom: 500px;
+
+	&::after {
+		content: '';
+		display: block;
+		clear: both;
+	}
 
 	.text {
 		position: absolute;
-		top: 50%;
+		top: 10%;
 		left: 10%;
 		transform: translateY(-50%);
 		.title {
@@ -48,30 +55,61 @@ figure.visual {
 		}
 	}
 
+	.headliner {
+		float: left;
+		position: relative;
+		width: calc(60% - 50px);
+		margin-top: 1000px;
+		margin-left: 50px;
+
+		.artist {
+			width: 40%;
+			height: 600px;
+			float: left;
+			margin-bottom: 500px;
+
+			&:nth-of-type(even) {
+				transform: translate(100px, 550px);
+			}
+
+			.img {
+				width: 100%;
+				height: 100%;
+				position: relative;
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+					filter: grayscale(0.4);
+				}
+			}
+
+			.content {
+				margin-top: 20px;
+				transition: 0.5s;
+
+				span {
+					color: $text;
+					font-size: $fontXXL;
+					font-weight: bold;
+				}
+			}
+		}
+	}
+
 	.vid {
-		position: absolute;
-		top: 50%;
-		right: 10%;
-		transform: translateY(-50%);
+		position: sticky;
+		top: 5%;
+		width: 40%;
+		float: right;
+		margin-top: 6%;
 
 		.content {
-			position: relative;
-			&::before {
-				content: '';
-				position: absolute;
-				top: -200px;
-				left: 50%;
-				transform: translateX(-50%);
-				width: 1px;
-				height: 200px;
-				background-color: $bg;
-			}
 			video {
-				width: 500px;
-				height: 500px;
+				width: 700px;
+				height: 800px;
 				background-color: $bg;
-				border-top-left-radius: 50%;
-				border-top-right-radius: 50%;
 				object-fit: cover;
 			}
 		}
