--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -114,17 +114,75 @@ figure.visual {
 			}
 		}
 	}
+}
 
-	.scroll-icon {
-		position: absolute;
-		bottom: 20px;
-		left: 50%;
-		transform: translateX(-50%);
+@media screen and (max-width: $tablet) {
+	figure.visual {
+		width: 100%;
+		height: 4500px;
+		color: $text;
+		padding-bottom: 500px;
 
-		svg {
-			width: 20px;
-			height: 20px;
-			opacity: 0.5;
+		.headliner {
+			width: 100%;
+			margin-left: 0;
+
+			.artist {
+				width: calc(50% - 10px);
+
+				&:nth-of-type(even) {
+					transform: translateY(550px);
+					margin-left: 20px;
+				}
+			}
+		}
+
+		.vid {
+			display: none;
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	figure.visual {
+		.text {
+			.title {
+				h2 {
+					font-size: 4rem;
+				}
+			}
+
+			.sub-title {
+				display: block;
+
+				&::after {
+					display: none;
+				}
+				span {
+					display: block;
+					margin-top: 20px;
+					font-size: $fontL;
+				}
+			}
+		}
+
+		.headliner {
+			width: 100%;
+			margin-left: 0;
+
+			.artist {
+				width: 100%;
+				margin-bottom: 100px;
+
+				&:nth-of-type(even) {
+					transform: none;
+					margin-left: 0px;
+				}
+			}
+		}
+
+		.vid {
+			display: none;
 		}
 	}
 }
