--- a/src/scss/main/_vid.scss
+++ b/src/scss/main/_vid.scss
@@ -79,3 +79,106 @@ figure.Vid {
 		opacity: 1;
 	}
 }
+
+@media screen and (max-width: $tablet) {
+	figure.Vid {
+		h3 {
+			font-size: 5vw;
+		}
+
+		> span {
+			top: 20%;
+			font-size: 1.5rem;
+		}
+
+		.inner {
+			width: 100%;
+
+			article {
+				float: left;
+				width: calc(50% - 10px);
+				height: 200px;
+				margin-right: 20px;
+				margin-bottom: 20px;
+
+				&:nth-of-type(2),
+				&:nth-of-type(4) {
+					margin-right: 0px;
+				}
+
+				.pic {
+					width: 100%;
+					height: 100%;
+					overflow: hidden;
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+						transform: scale(1.4);
+					}
+				}
+			}
+		}
+
+		&.on .inner {
+			opacity: 1;
+		}
+
+		&.on article {
+			transform: translateY(0px);
+			opacity: 1;
+		}
+	}
+}
+
+@media screen and (max-width: $mobile) {
+	figure.Vid {
+		padding-top: 0;
+		h3 {
+			font-size: 4vw;
+		}
+
+		> span {
+			top: 20%;
+			font-size: 1.5rem;
+		}
+
+		.inner {
+			width: 100%;
+
+			article {
+				float: left;
+				width: 100%;
+				height: 200px;
+				margin-right: 0;
+				margin-bottom: 20px;
+
+				&:nth-of-type(2),
+				&:nth-of-type(4) {
+					margin-right: 0px;
+				}
+
+				.pic {
+					width: 100%;
+					height: 100%;
+					overflow: hidden;
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+						transform: scale(1.4);
+					}
+				}
+			}
+		}
+
+		&.on .inner {
+			opacity: 1;
+		}
+
+		&.on article {
+			transform: translateY(0px);
+			opacity: 1;
+		}
+	}
+}
