--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -145,6 +145,7 @@ figure.visual {
 
 @media screen and (max-width: $mobile) {
 	figure.visual {
+		height: auto;
 		.text {
 			.title {
 				h2 {
@@ -177,6 +178,10 @@ figure.visual {
 				&:nth-of-type(even) {
 					transform: none;
 					margin-left: 0px;
+				}
+
+				&:last-of-type {
+					margin-bottom: 0;
 				}
 			}
 		}
